--- a/index.html
+++ b/index.html
@@ -818,9 +818,10 @@ console.log = console.info = console.debug = console.warn = console.error = cons
 	
 	// ---- Sticky header offset (single source of truth) ----
 	function computeHeaderOffset(){
-	  const h = document.querySelector('.site-header') || document.querySelector('header');
-	  return (h ? Math.round(h.getBoundingClientRect().height) : 0) + 12; // breathing room
+  const h = document.querySelector('.site-header') || document.querySelector('header');
+  return (h ? Math.round(h.getBoundingClientRect().height) : 0) + 12;
 	}
+
 	function applyHeaderOffset(){
 	  document.documentElement.style.setProperty('--header-offset', computeHeaderOffset() + 'px');
 	}
@@ -889,43 +890,74 @@ console.log = console.info = console.debug = console.warn = console.error = cons
         });
 		
 		
-		// Accordion behavior (one open at a time, reliable scroll)
-		header.addEventListener('click', () => {
-		  const opening = !body.classList.contains('open');
+		// Accordion behavior (REPLACE your existing header.addEventListener handler with this)
+header.addEventListener('click', () => {
+  const opening = !body.classList.contains('open');
 
-		  // close all others
-		  document.querySelectorAll('.category-body.open').forEach(b => {
-			if (b !== body) {
-			  b.classList.remove('open');
-			  b.style.maxHeight = '0px';
-			  const c = b.previousElementSibling?.querySelector('.caret');
-			  if (c) c.textContent = '▶';
-			}
-		  });
+  // 1) Close any other open categories
+  document.querySelectorAll('.category-body.open').forEach(b => {
+    if (b !== body) {
+      b.classList.remove('open');
+      b.style.maxHeight = '0px';
+      const ct = b.previousElementSibling ? b.previousElementSibling.querySelector('.caret') : null;
+      if (ct) ct.textContent = '▶';
+    }
+  });
 
-		  if (!opening) {
-			// collapse this one
-			body.classList.remove('open');
-			body.style.maxHeight = '0px';
-			const c = header.querySelector('.caret'); if (c) c.textContent = '▶';
-			return;
+  if (!opening) {
+    // 2) Collapse this one and stop
+    body.classList.remove('open');
+    body.style.maxHeight = '0px';
+    const ct = header.querySelector('.caret');
+    if (ct) ct.textContent = '▶';
+    return;
+  }
+
+  // 3) Open this one
+  body.classList.add('open');
+  body.style.maxHeight = body.scrollHeight + 'px';
+  const ct = header.querySelector('.caret');
+  if (ct) ct.textContent = '▼';
+
+  // 4) Two-step, iOS-safe scroll that accounts for the sticky header
+  const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+  const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent);
+
+  requestAnimationFrame(() => {
+    // force layout so Safari applies the new height before scrolling
+    void body.offsetHeight;
+
+    requestAnimationFrame(() => {
+      // Step A: native anchor scroll to the category header
+      header.scrollIntoView({
+        block: 'start',
+        behavior: (isIOS || prefersReduced) ? 'auto' : 'smooth'
+      });
+
+      // Step B: precise correction so the header sits just below the sticky header
+		const offsetPx = computeHeaderOffset();
+
+		// helper: measure & nudge so headerTop === offsetPx
+		function correctOnce() {
+		  const currentTop = Math.round(header.getBoundingClientRect().top);
+		  const delta = currentTop - offsetPx;
+		  if (Math.abs(delta) > 2) {
+			// move exactly by the error amount
+			window.scrollBy({ top: delta, left: 0, behavior: 'auto' });
 		  }
+		}
 
-		  // open this one
-		  body.classList.add('open');
-		  body.style.maxHeight = body.scrollHeight + 'px';
-		  const c = header.querySelector('.caret'); if (c) c.textContent = '▼';
+		// run once shortly after the smooth scroll, then once more after layout settles
+		const firstDelay  = (isIOS || prefersReduced) ? 80  : 220;
+		const secondDelay = (isIOS || prefersReduced) ? 180 : 420;
 
-		  // iOS-safe, header-aware scroll after layout settles
-		  requestAnimationFrame(() => {
-			// force reflow so Safari knows the new height
-			void body.offsetHeight;
-			requestAnimationFrame(() => {
-			  // scroll to the HEADER of the category (more reliable than body)
-			  smoothScrollToElTop(header);
-			});
-		  });
-		});
+		setTimeout(correctOnce, firstDelay);
+		setTimeout(correctOnce, secondDelay);
+
+    });
+  });
+});
+
 
 
 
