--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 	:root { --header-offset: 120px; }  /* JS will overwrite precisely */
 	html { scroll-behavior: smooth; }
 	.category, .category-header, .category-body { scroll-margin-top: var(--header-offset); }
-	html { scroll-padding-top: var(--header-offset); }
+	/*html { scroll-padding-top: var(--header-offset); }*/
 	
     .menu-item{display:flex;justify-content:space-between;align-items:flex-start;padding:10px;border-radius:8px;border:1px solid #f7efee;margin-bottom:8px}
     .menu-item .meta{max-width:72%}
