--- a/index.html
+++ b/index.html
@@ -42,12 +42,53 @@
   text-align: center;
 }
 
-/* Ticker sits below header, above page, but below any modal */
+/* Ticker container sits above the header, stays visible */
 #status-ticker {
-  position: sticky;      /* or 'fixed' if you prefer */
+  position: sticky;
   top: 0;
-  z-index: 700;          /* lower than modals */
+  z-index: 3000;
+  background: #d9464a;
+  color: #fff;
+  padding: 6px 0;
+  box-shadow: 0 2px 8px rgba(0,0,0,.15);
+  overflow: hidden;
+  white-space: nowrap;
+  border-radius: 10px;      /* matches your cards */
+  margin: 12px 12px 8px;    /* same insets as your header/card look */
 }
+
+/* Scrolling track */
+#status-ticker .ticker-track {
+  display: inline-flex;
+  align-items: center;
+  gap: 48px;                 /* space between the two copies */
+  will-change: transform;
+  animation: tickerMove var(--ticker-speed, 28s) linear infinite;
+}
+
+#status-ticker span { font-weight: 700; font-size: 1rem; padding: 0 10px; }
+
+/* Marquee keyframes */
+@keyframes tickerMove {
+  from { transform: translateX(0); }
+  to   { transform: translateX(-50%); } /* one full copy width */
+}
+
+/* Header sticks BELOW the ticker */
+.site-header {
+  position: sticky;
+  top: var(--ticker-offset, 12px);
+  z-index: 1100;
+}
+
+/* Slow it a touch more on small screens */
+@media (max-width: 640px) {
+  #status-ticker .ticker-track {
+    animation-duration: var(--ticker-speed-mobile, 36s);
+  }
+}
+
+
 
 html { scroll-padding-top: calc(var(--header-offset, 0px) + var(--ticker-height, 0px)); }
 
@@ -680,6 +721,8 @@ main{ display:block !important; }
   margin-top:20px !important;
 }
 
+#ticker-ghost, .ticker-spacer { display:none !important; }
+
 
 <script>
 console.info('Console levels forced');
@@ -696,6 +739,18 @@ console.log = console.info = console.debug = console.warn = console.error = cons
     <!-- your existing header / main / etc -->
 
   <div class="container">
+<!-- Status Ticker -->
+<div id="status-ticker" class="hidden" role="status" aria-live="polite">
+  <div class="ticker-track">
+    <span id="ticker-text">We’re closed this Sunday for a private event — thank you!</span>
+    <span class="ticker-dup" aria-hidden="true"></span>
+  </div>
+</div>
+
+
+<!-- Then your header -->
+<header class="site-header"> ... </header>
+
     <!-- Header -->
     <header class="site-header">
   <div class="header-inner centered">
@@ -2912,6 +2967,56 @@ window.downloadReceiptPlain = function (summary, items, preferredTimeStr) {
   });
 })();
 </script>
+<script>
+(function () {
+  function refreshTickerOffset() {
+    const bar = document.getElementById('status-ticker');
+    const visible = bar && !bar.classList.contains('hidden');
+    const h = (visible ? Math.ceil(bar.getBoundingClientRect().height) : 0);
+    document.documentElement.style.setProperty('--ticker-offset', (h + 12) + 'px');
+  }
+
+  // Make the marquee seamless by duplicating the text once
+  function initTickerMarquee() {
+    const bar = document.getElementById('status-ticker');
+    if (!bar) return;
+    const text = document.getElementById('ticker-text');
+    const dup  = bar.querySelector('.ticker-dup');
+    if (!text || !dup) return;
+
+    dup.textContent = text.textContent;
+
+    // Optionally tweak speed based on length (longer message = slower)
+    const len = text.textContent.length;
+    const base = Math.min(Math.max(len / 3, 24), 60); // 24–60s
+    document.documentElement.style.setProperty('--ticker-speed', base + 's');
+    document.documentElement.style.setProperty('--ticker-speed-mobile', (base + 8) + 's');
+  }
+
+  // Expose so your status loader can call after setting the message
+  window.showTicker = function showTicker(message) {
+    const bar = document.getElementById('status-ticker');
+    const text = document.getElementById('ticker-text');
+    if (!bar || !text) return;
+    text.textContent = message;
+    bar.classList.remove('hidden');
+    initTickerMarquee();
+    refreshTickerOffset();
+  };
+
+  window.hideTicker = function hideTicker() {
+    const bar = document.getElementById('status-ticker');
+    if (!bar) return;
+    bar.classList.add('hidden');
+    refreshTickerOffset();
+  };
+
+  window.addEventListener('load',  refreshTickerOffset, { passive: true });
+  window.addEventListener('resize', refreshTickerOffset, { passive: true });
+})();
+</script>
+
+
 
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
