--- a/index.html
+++ b/index.html
@@ -766,6 +766,10 @@ main{ display:block !important; }
     grid-column: 2;                    /* controls flow beneath the name */
   }
 }
+/* Override older width limits for order summary text */
+.order-row .meta {
+  max-width: none !important;
+}
 
 
 <script>
