--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@ console.log = console.info = console.debug = console.warn = console.error = cons
     margin-top: 6px;
   }
 }
-/* --- Center-align informational cards --- */
+/* --- Center-align informational cards --- 
 .about-section,
 .food-section,
 .allergens-section,
@@ -835,23 +835,23 @@ console.log = console.info = console.debug = console.warn = console.error = cons
   text-align: center;
   justify-content: center;
   align-items: center;
-}
+}*/
 
-/* If your .card uses flexbox internally, ensure it can center its contents */
+/* If your .card uses flexbox internally, ensure it can center its contents 
 .card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+}*/
 
-/* Optional: constrain width for readability */
+/* Optional: constrain width for readability 
 .about-section .card,
 .food-section .card,
 .allergens-section .card {
   max-width: 800px;
   margin: 0 auto;
-}
+}*/
 
 
   </style>
