--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ html { scroll-padding-top: calc(var(--header-offset, 0px) + var(--ticker-height,
   position: sticky;
   top: 0;
   z-index: 2000;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.);
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   overflow: hidden;
 }
 
