--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@ console.log = console.info = console.debug = console.warn = console.error = cons
     <header class="site-header">
   <div class="header-inner centered">
     <div class="brand-block" style="margin-top: 1px">
-      <img src="images/logotransparent1.png?v=1" alt="Rung's Thai Kitchen Logo" class="brand-logo">
+      <img src="images/LogoTransparent1.png?v=1" alt="Rung's Thai Kitchen Logo" class="brand-logo">
       <!--<div class="brand-title">Rung's Thai Kitchen</div>-->
       <div class="brand-title">Authentic Thai Takeaway</div>
     </div>
